<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBkueBlack"
    android:orientation="vertical"
    tools:context="com.httpmilenacabrera.configuracionandroid.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/colorBlueN"
        android:gravity="center"
        android:text="@string/titulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/futbolistas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:onClick="goPlayers"
            android:id="@+id/btnjugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugadores"/>
        <Button
            android:onClick="goModels"
            android:id="@+id/btnmodelos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelos"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp">
    <Button
        android:onClick="exit"
        android:id="@+id/btncerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar"
        android:textColor="@color/colorBlanco"
        android:background="@color/colorRed"/>
</LinearLayout>

</LinearLayout>

