<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBkueBlack"
    tools:context="com.httpmilenacabrera.configuracionandroid.Jugadores"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0">
            <ImageView
                android:onClick="goBack"
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"/>
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="40dp"
                android:text="@string/jugador"
                android:textColor="@color/colorBlueNice"
                android:gravity="center"/>


        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0">
            <ImageView
                android:onClick="goForward"
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forward"/>
        </LinearLayout>
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorBlueN" >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pibe" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/pibe"
            android:textColor="@color/colorBlanco"
            android:gravity="center"
            android:paddingTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorBlueN" >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/falcao" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/falcao"
            android:textColor="@color/colorBlanco"
            android:gravity="center"
            android:paddingTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorBlueN" >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/james" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/james"
            android:textColor="@color/colorBlanco"
            android:gravity="center"
            android:paddingTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorBlueN" >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/messi" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/jugadorCuatro"
            android:textColor="@color/colorBlanco"
            android:gravity="center"
            android:paddingTop="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:onClick="goContacts"
            android:id="@+id/contactenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contctanos"/>
    </LinearLayout>
</LinearLayout>
