<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBkueBlack"
    android:gravity="center_horizontal"
    tools:context="com.httpmilenacabrera.configuracionandroid.Registro"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0">
            <ImageView
                android:onClick="goBack"
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="39dp"
            android:text="@string/contctanos"
            android:textColor="@color/colorBlueNice"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0">
            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorBlueN"
                android:text="@string/nombre"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorBlueLight"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorBlueN"
                android:text="@string/apellido"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorBlueLight"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorBlueN"
                android:text="@string/cedula"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorBlueLight"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorBlueN"
                android:text="@string/correo"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorBlueLight"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enviar"/>
    </LinearLayout>
</LinearLayout>
